Rewrote the delegate generators to use java.lang.foreign instead of JNA.